# actix-crud

./: Cargo.toml  justfile
migrations/: 0001_create_todos_table.sql
src/: main.rs
src/config/: database.rs
src/domain/: models.rs  repository.rs
src/errors/: errors.rs
src/handlers/: todo_handler.rs
src/routes/: todo_route.rs
src/services/: todo_service.rs
