[package]
name = "actix-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11.5"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
anyhow = "1.0.93"
thiserror = "2.0.3"
validator = {version = "0.19.0", features = ["derive"] }
log = "0.4.22"
